--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Perfectly Rooted Solutions</title>
+<link rel="icon" type="image/png" href="favicon.png">
+<meta name="description" content="Perfectly Rooted Solutions empowers entrepreneurs and organizations through strategic business consulting, structure setup, and capital readiness planning.">
+
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
   <style>
     body {
@@ -20,10 +23,12 @@
       padding: 1rem 2rem;
     }
     header img {
-      max-width: 200px;
-      margin: 0 auto 10px;
-      display: block;
-    }
+  max-width: 200px;
+  margin: 0 auto 10px;
+  display: block;
+  border-radius: 50%;
+  object-fit: cover;
+}
     nav a {
       margin: 0 1rem;
       color: white;
