--- a/index.html
+++ b/index.html
@@ -172,6 +172,15 @@ transition: none;
     <p>Empowering entrepreneurs and organizations to align purpose with performance.</p>
     <a href="https://form.jotform.com/251166993980066" target="_blank" class="cta-button">Book a Consultation</a>
   </div>
+<div class="section" id="freeguide">
+  <h2>📘 Download Our Free Business Guide</h2>
+  <p style="text-align: center;">
+    Get your copy of “Rooted in Success: 5 Essentials for Building a Strong Business Foundation.”
+  </p>
+  <div style="text-align: center; margin-top: 1.5rem;">
+    <a href="rooted-guide.pdf" target="_blank" class="cta-button">Download Free Guide</a>
+  </div>
+</div>
 
   <div class="section" id="about">
     <h2>About Us</h2>
