--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
       Get your copy of “Rooted in Success” and build a stronger foundation for your business.
     </p>
     <div style="text-align: center; margin-top: 1.5rem;">
-      <a href="https://freeguide.perfectly-rooted.com" target="_blank" class="cta-button">Download Free Guide</a>
+      <a href="https://stan.store/perfectlyrooted/p/rooted-in-success-free-business-guide" target="_blank" class="cta-button">Download Free Guide</a>
     </div>
   </div>
 
