--- a/index.html
+++ b/index.html
@@ -157,10 +157,12 @@
   <header>
     <img src="logo.png" alt="Perfectly Rooted Solutions Logo">
     <nav>
-      <a href="#about">About</a>
-      <a href="#services">Services</a>
-      <a href="#contact">Contact</a>
-    </nav>
+  <a href="#about">About</a>
+  <a href="#services">Services</a>
+  <a href="#contact">Contact</a>
+  <a href="packages.html">Packages</a>
+</nav>
+
   </header>
 
   <div class="hero">
