--- a/packages.html
+++ b/packages.html
@@ -1,6 +1,117 @@
-<nav>
-  <a href="#about">About</a>
-  <a href="#services">Services</a>
-  <a href="#contact">Contact</a>
-  <a href="packages.html">Packages</a> <!-- Add this line -->
-</nav>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Perfectly Rooted Solutions | Service Packages</title>
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
+  <style>
+    body {
+      font-family: 'Playfair Display', serif;
+      background-color: #fafafa;
+      color: #1b4332;
+      margin: 0;
+      padding: 2rem;
+    }
+    h1, h2 {
+      text-align: center;
+      color: #002147;
+    }
+    .package {
+      max-width: 800px;
+      margin: 2rem auto;
+      background: #fff;
+      padding: 2rem;
+      border-radius: 12px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.05);
+    }
+    .package h2 {
+      margin-bottom: 0.5rem;
+    }
+    .package ul {
+      list-style-type: square;
+      padding-left: 1.5rem;
+      margin-bottom: 1rem;
+    }
+    .price {
+      font-weight: bold;
+      color: #14532d;
+      font-size: 1.2rem;
+    }
+    .cta {
+      display: block;
+      margin-top: 1rem;
+      text-align: center;
+    }
+    .cta a {
+      background-color: #1b4332;
+      color: white;
+      padding: 0.7rem 1.5rem;
+      border-radius: 30px;
+      font-weight: bold;
+      text-decoration: none;
+      transition: background-color 0.3s ease, transform 0.3s ease;
+    }
+    .cta a:hover {
+      background-color: #14532d;
+      transform: scale(1.05);
+    }
+    .bonus {
+      text-align: center;
+      margin-top: 3rem;
+    }
+  </style>
+</head>
+<body>
+  <h1>Perfectly Rooted Solutions<br>Service Menu</h1>
+
+  <div class="package">
+    <h2>1. Rooted Foundations Package</h2>
+    <p><em>Best for new entrepreneurs ready to legally launch their business</em></p>
+    <ul>
+      <li>LLC Formation (Articles of Organization filed)</li>
+      <li>EIN Registration (IRS Business Tax ID)</li>
+      <li>Operating Agreement Template</li>
+      <li>1 Business Strategy Coaching Call (60 minutes)</li>
+    </ul>
+    <p class="price">Launch Price: $750</p>
+    <div class="cta"><a href="https://form.jotform.com/251166993980066" target="_blank">Launch My Business</a></div>
+  </div>
+
+  <div class="package">
+    <h2>2. Strategic Growth Package</h2>
+    <p><em>Best for entrepreneurs wanting setup + business planning</em></p>
+    <ul>
+      <li>LLC or S-Corp Formation</li>
+      <li>EIN Registration</li>
+      <li>Operating Agreement</li>
+      <li>Customized Business Plan (Ready for banks, grants, and investors)</li>
+      <li>2 Business Strategy Coaching Calls (60 minutes each)</li>
+    </ul>
+    <p class="price">Launch Price: $1,200</p>
+    <div class="cta"><a href="https://form.jotform.com/251166993980066" target="_blank">Launch My Business</a></div>
+  </div>
+
+  <div class="package">
+    <h2>3. Legacy Builder Package</h2>
+    <p><em>Best for entrepreneurs serious about structure, funding, and scaling</em></p>
+    <ul>
+      <li>LLC or S-Corp or Nonprofit Formation</li>
+      <li>EIN Registration</li>
+      <li>Custom Operating Agreement</li>
+      <li>Customized Business Plan</li>
+      <li>Capital Readiness Coaching (Grant, Credit, Loan Preparation)</li>
+      <li>Full CRM + Process Consulting Session</li>
+      <li>4 Business Strategy Coaching Sessions (1 hour each)</li>
+    </ul>
+    <p class="price">Launch Price: $2,000</p>
+    <div class="cta"><a href="https://form.jotform.com/251166993980066" target="_blank">Launch My Business</a></div>
+  </div>
+
+  <div class="bonus">
+    <h2>✨ Bonus Add-Ons</h2>
+    <p>Additional Coaching Sessions: <strong>$150/hour</strong><br>
+    Business Plan Only (No Setup): <strong>$750</strong></p>
+  </div>
+</body>
+</html>
