--- a/packages.html
+++ b/packages.html
@@ -75,7 +75,7 @@
       <li>1 Business Strategy Coaching Call (60 minutes)</li>
     </ul>
     <p class="price">Launch Price: $750</p>
-    <div class="cta"><a href="https://form.jotform.com/251166993980066" target="_blank">Launch My Business</a></div>
+    <div class="cta"><a href="https://buy.stripe.com/aEU6oM8Mx1IhdKU4gg" target="_blank">Launch My Business</a></div>
   </div>
 
   <div class="package">
@@ -89,7 +89,7 @@
       <li>2 Business Strategy Coaching Calls (60 minutes each)</li>
     </ul>
     <p class="price">Launch Price: $1,200</p>
-    <div class="cta"><a href="https://form.jotform.com/251166993980066" target="_blank">Launch My Business</a></div>
+    <div class="cta"><a href="https://buy.stripe.com/eVa9AY1k5aeN8qA145" target="_blank">Launch My Business</a></div>
   </div>
 
   <div class="package">
@@ -105,7 +105,7 @@
       <li>4 Business Strategy Coaching Sessions (1 hour each)</li>
     </ul>
     <p class="price">Launch Price: $2,000</p>
-    <div class="cta"><a href="https://form.jotform.com/251166993980066" target="_blank">Launch My Business</a></div>
+    <div class="cta"><a href="https://buy.stripe.com/cN2dRe5Al72BeOYfZ0" target="_blank">Launch My Business</a></div>
   </div>
 
   <div class="bonus">
