--- a/packages.html
+++ b/packages.html
@@ -7,7 +7,10 @@
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
   <style>
     body {
-      font-family: 'Playfair Display', serif;
+     <div style="text-align: center; margin-bottom: 1.5rem;">
+  <a href="index.html" style="text-decoration: none; font-weight: bold; color: #002147;">← Back to Home</a>
+</div>
+ font-family: 'Playfair Display', serif;
       background-color: #fafafa;
       color: #1b4332;
       margin: 0;
