--- a/packages.html
+++ b/packages.html
@@ -7,10 +7,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
   <style>
     body {
-     <div style="text-align: center; margin-bottom: 1.5rem;">
-  <a href="index.html" style="text-decoration: none; font-weight: bold; color: #002147;">← Back to Home</a>
-</div>
- font-family: 'Playfair Display', serif;
+      font-family: 'Playfair Display', serif;
       background-color: #fafafa;
       color: #1b4332;
       margin: 0;
@@ -63,9 +60,22 @@
       text-align: center;
       margin-top: 3rem;
     }
+    .nav {
+      text-align: center;
+      margin-bottom: 2rem;
+    }
+    .nav a {
+      font-weight: bold;
+      text-decoration: none;
+      color: #002147;
+    }
   </style>
 </head>
 <body>
+  <div class="nav">
+    <a href="index.html">← Back to Home</a>
+  </div>
+
   <h1>Perfectly Rooted Solutions<br>Service Menu</h1>
 
   <div class="package">
