--- a/packages.html
+++ b/packages.html
@@ -69,6 +69,25 @@
       text-decoration: none;
       color: #002147;
     }
+    .faq {
+      max-width: 800px;
+      margin: 3rem auto;
+      background: #fff;
+      padding: 2rem;
+      border-radius: 12px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.05);
+    }
+    .faq h2 {
+      text-align: center;
+      color: #002147;
+    }
+    .faq-item {
+      margin-bottom: 1.5rem;
+    }
+    .faq-item h3 {
+      margin-bottom: 0.5rem;
+      color: #1b4332;
+    }
   </style>
 </head>
 <body>
@@ -79,7 +98,7 @@
   <h1>Perfectly Rooted Solutions<br>Service Menu</h1>
 
   <div class="package">
-    <h2>1. Rooted Foundations Package</h2>
+    <h2>🏁 Rooted Foundations Package</h2>
     <p><em>Best for new entrepreneurs ready to legally launch their business</em></p>
     <ul>
       <li>LLC Formation (Articles of Organization filed)</li>
@@ -88,11 +107,11 @@
       <li>1 Business Strategy Coaching Call (60 minutes)</li>
     </ul>
     <p class="price">Launch Price: $750</p>
-    <div class="cta"><a href="https://buy.stripe.com/aEU6oM8Mx1IhdKU4gg" target="_blank">Launch My Business</a></div>
+    <div class="cta"><a href="https://buy.stripe.com/aEU6oM8Mx1IhdKU4gg" target="_blank">Launch Rooted Foundations</a></div>
   </div>
 
   <div class="package">
-    <h2>2. Strategic Growth Package</h2>
+    <h2>📈 Strategic Growth Package</h2>
     <p><em>Best for entrepreneurs wanting setup + business planning</em></p>
     <ul>
       <li>LLC or S-Corp Formation</li>
@@ -102,11 +121,11 @@
       <li>2 Business Strategy Coaching Calls (60 minutes each)</li>
     </ul>
     <p class="price">Launch Price: $1,200</p>
-    <div class="cta"><a href="https://buy.stripe.com/eVa9AY1k5aeN8qA145" target="_blank">Launch My Business</a></div>
+    <div class="cta"><a href="https://buy.stripe.com/eVa9AY1k5aeN8qA145" target="_blank">Launch Strategic Growth</a></div>
   </div>
 
   <div class="package">
-    <h2>3. Legacy Builder Package</h2>
+    <h2>🏛️ Legacy Builder Package</h2>
     <p><em>Best for entrepreneurs serious about structure, funding, and scaling</em></p>
     <ul>
       <li>LLC or S-Corp or Nonprofit Formation</li>
@@ -118,13 +137,32 @@
       <li>4 Business Strategy Coaching Sessions (1 hour each)</li>
     </ul>
     <p class="price">Launch Price: $2,000</p>
-    <div class="cta"><a href="https://buy.stripe.com/cN2dRe5Al72BeOYfZ0" target="_blank">Launch My Business</a></div>
+    <div class="cta"><a href="https://buy.stripe.com/cN2dRe5Al72BeOYfZ0" target="_blank">Launch Legacy Builder</a></div>
   </div>
 
   <div class="bonus">
     <h2>✨ Bonus Add-Ons</h2>
     <p>Additional Coaching Sessions: <strong>$150/hour</strong><br>
     Business Plan Only (No Setup): <strong>$750</strong></p>
+  </div>
+
+  <div class="faq">
+    <h2>📌 Frequently Asked Questions</h2>
+
+    <div class="faq-item">
+      <h3>How long does setup take?</h3>
+      <p>Typically 3-5 business days for LLC or EIN setup. Business plans and coaching calls are scheduled within 1 week of purchase.</p>
+    </div>
+
+    <div class="faq-item">
+      <h3>Can I upgrade my package later?</h3>
+      <p>Yes! If you start with a smaller package, you can apply your payment toward an upgrade within 30 days.</p>
+    </div>
+
+    <div class="faq-item">
+      <h3>Do you offer payment plans?</h3>
+      <p>We do! Payment plans are available through our checkout provider. Just click your preferred package to view installment options.</p>
+    </div>
   </div>
 </body>
 </html>
