--- a/freeguide/index.html
+++ b/freeguide/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="refresh" content="0; URL='https://freeguide.perfectly-rooted.com'" />
+  <meta http-equiv="refresh" content="0; URL='https://stan.store/perfectlyrooted/p/rooted-in-success-free-business-guide'" />
   <title>Redirecting...</title>
 </head>
 <body>
-  <p>If you are not redirected, <a href="https://freeguide.perfectly-rooted.com">click here</a>.</p>
+  <p>If you are not redirected, <a href="https://stan.store/perfectlyrooted/p/rooted-in-success-free-business-guide">click here</a>.</p>
 </body>
 </html>
