Update index.html to link to new guide

--- a/freeguide/index.html
+++ b/freeguide/index.html
@@ -1,11 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="refresh" content="0; URL='https://stan.store/perfectlyrooted/p/rooted-in-success-free-business-guide'" />
-  <title>Redirecting...</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Rooted in Success – Free Guide</title>
+  <style>
+    body {
+      background-color: #d5e8d4;
+      font-family: sans-serif;
+      text-align: center;
+      padding: 50px;
+      color: #1b4332;
+    }
+    a.button {
+      background-color: #002147;
+      color: white;
+      padding: 12px 24px;
+      border-radius: 5px;
+      font-size: 16px;
+      text-decoration: none;
+    }
+  </style>
 </head>
 <body>
-  <p>If you are not redirected, <a href="https://stan.store/perfectlyrooted/p/rooted-in-success-free-business-guide">click here</a>.</p>
+  <h1>📘 Rooted in Success</h1>
+  <p>This guide will help you gain clarity, direction, and a solid foundation to build your business with purpose.</p>
+  <a class="button" href="/rooted-in-success.pdf" download>📥 Download Your Free Guide</a>
 </body>
 </html>
+
