--- a/freeguide/index.html
+++ b/freeguide/index.html
@@ -2,30 +2,25 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <meta http-equiv="refresh" content="0; URL='https://stan.store/perfectlyrooted/p/get-my-free-guide-now-x6g1ey79'" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Rooted in Success – Free Guide</title>
+  <title>Redirecting to Free Guide...</title>
   <style>
     body {
-      background-color: #d5e8d4;
       font-family: sans-serif;
-      text-align: center;
-      padding: 50px;
+      background-color: #d5e8d4;
       color: #1b4332;
+      text-align: center;
+      padding: 100px 20px;
     }
-    a.button {
-      background-color: #002147;
-      color: white;
-      padding: 12px 24px;
-      border-radius: 5px;
-      font-size: 16px;
-      text-decoration: none;
+    a {
+      color: #002147;
+      font-weight: bold;
     }
   </style>
 </head>
 <body>
-  <h1>📘 Rooted in Success</h1>
-  <p>This guide will help you gain clarity, direction, and a solid foundation to build your business with purpose.</p>
-  <a class="button" href="/rooted-in-success.pdf" download>📥 Download Your Free Guide</a>
+  <h1>Redirecting you to your free guide...</h1>
+  <p>If you’re not redirected, <a href="https://stan.store/perfectlyrooted/p/get-my-free-guide-now-x6g1ey79">click here</a>.</p>
 </body>
 </html>
-
