--- a/intake/index.html
+++ b/intake/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; URL='https://form.jotform.com/YOUR_FORM_URL_HERE'" />
+    <meta http-equiv="refresh" content="0; URL='https://form.jotform.com/251285116591053'" />
     <title>Redirecting to Intake Form</title>
   </head>
   <body>
-    <p>If you're not redirected, <a href="https://form.jotform.com/YOUR_FORM_URL_HERE">click here</a>.</p>
+    <p>If you're not redirected, <a href="https://form.jotform.com/251285116591053">click here</a>.</p>
   </body>
 </html>
+
