--- a/index.html
+++ b/index.html
@@ -217,7 +217,11 @@
   <div class="footer">
     <p>&copy; 2025 Perfectly Rooted Solutions. All rights reserved.</p>
     <p>Phone: 800.893.0006 | Address: 141 Traction St Unit 256, Greenville, SC 29611</p>
-    <p>Email: info@perfectly-rooted.com</p>
+    <p>Email: info@perfectly-rooted.com</p><p>
+  <a href="/terms.html" style="color: #1b4332; text-decoration: underline;">
+    Terms & Privacy Policy
+  </a>
+</p>
   </div>
   <script>
     document.querySelectorAll('a[href^="#"]').forEach(anchor => {
