--- a/index.html
+++ b/index.html
@@ -3,239 +3,332 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Perfectly Rooted Solutions</title>
-  <link rel="icon" type="image/png" href="favicon.png">
-  <meta name="description" content="Perfectly Rooted Solutions empowers entrepreneurs and organizations through strategic business consulting, structure setup, and capital readiness planning.">
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
+  <title>Perfectly Rooted Solutions - Home</title>
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Lato:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <link rel="stylesheet" href="shared-styles.css">
   <style>
-    body {
-      font-family: 'Playfair Display', serif;
-      margin: 0;
-      padding: 0;
-      color: #2c3e50;
-      background-color: #fafafa;
-      scroll-behavior: smooth;
-    }
-    header {
-      background-color: #002147;
-      text-align: center;
-      padding: 1rem 2rem;
-    }
-    header img {
-      max-width: 200px;
-      margin: 0 auto 10px;
-      display: block;
-      border-radius: 50%;
-      object-fit: cover;
-    }
-    nav a {
-      margin: 0 1rem;
-      color: white;
-      text-decoration: none;
-      font-weight: bold;
-    }
+    /* Hero Section - Homepage specific */
     .hero {
-      background: #d5e8d4;
-      padding: 5rem 2rem;
+      background: var(--gradient-accent);
+      padding: 6rem 2rem;
       text-align: center;
-      opacity: 1;
-      transform: translateY(0);
-      transition: none;
+      position: relative;
+      overflow: hidden;
     }
+
+    .hero::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 20"><defs><radialGradient id="a" cx="50%" cy="50%" r="50%"><stop offset="0%" stop-color="white" stop-opacity="0.1"/><stop offset="100%" stop-color="white" stop-opacity="0"/></radialGradient></defs><circle cx="10" cy="10" r="1.5" fill="url(%23a)"/><circle cx="30" cy="5" r="1" fill="url(%23a)"/><circle cx="60" cy="15" r="1.2" fill="url(%23a)"/><circle cx="80" cy="8" r="0.8" fill="url(%23a)"/></svg>') repeat;
+      opacity: 0.3;
+      animation: float 20s ease-in-out infinite;
+    }
+
+    .hero-content {
+      max-width: 800px;
+      margin: 0 auto;
+      position: relative;
+      z-index: 2;
+    }
+
     .hero h1 {
+      font-family: 'Playfair Display', serif;
+      font-size: clamp(2.5rem, 5vw, 4rem);
+      font-weight: 600;
+      color: var(--primary-color);
+      margin-bottom: 1.5rem;
+      line-height: 1.2;
+      text-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    }
+
+    .hero p {
+      font-size: 1.25rem;
+      color: var(--secondary-color);
+      margin-bottom: 2.5rem;
+      font-weight: 400;
+      max-width: 600px;
+      margin-left: auto;
+      margin-right: auto;
+    }
+
+    .cta-button {
+      display: inline-flex;
+      align-items: center;
+      gap: 0.5rem;
+      background: var(--gradient-primary);
+      color: var(--white);
+      padding: 1rem 2rem;
+      text-decoration: none;
+      border-radius: 50px;
+      font-weight: 600;
+      font-size: 1.1rem;
+      transition: all 0.3s ease;
+      box-shadow: var(--shadow-lg);
+      position: relative;
+      overflow: hidden;
+    }
+
+    .cta-button::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: -100%;
+      width: 100%;
+      height: 100%;
+      background: linear-gradient(90deg, transparent, rgba(255, 255, 255, 0.2), transparent);
+      transition: left 0.5s ease;
+    }
+
+    .cta-button:hover::before {
+      left: 100%;
+    }
+
+    .cta-button:hover {
+      transform: translateY(-3px);
+      box-shadow: var(--shadow-xl);
+    }
+
+    /* Free Guide Section */
+    .free-guide {
+      background: var(--gradient-primary);
+      color: var(--white);
+      border-radius: 20px;
+      padding: 3rem;
+      text-align: center;
+      margin: 2rem 0;
+      position: relative;
+      overflow: hidden;
+    }
+
+    .free-guide::before {
+      content: '📘';
+      position: absolute;
+      top: -20px;
+      right: -20px;
+      font-size: 8rem;
+      opacity: 0.1;
+      transform: rotate(15deg);
+    }
+
+    .free-guide h2 {
+      color: var(--white);
+      margin-bottom: 1rem;
+    }
+
+    .free-guide h2::after {
+      background: var(--accent-color);
+    }
+
+    .guide-button {
+      background: var(--white);
+      color: var(--primary-color);
+      padding: 1rem 2rem;
+      border-radius: 50px;
+      text-decoration: none;
+      font-weight: 600;
+      display: inline-flex;
+      align-items: center;
+      gap: 0.5rem;
+      transition: all 0.3s ease;
+      box-shadow: var(--shadow-md);
+    }
+
+    .guide-button:hover {
+      transform: translateY(-2px);
+      box-shadow: var(--shadow-lg);
+    }
+
+    /* Features Section */
+    .features-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 2rem;
+      margin-top: 3rem;
+    }
+
+    .feature-card {
+      text-align: center;
+      padding: 2rem;
+    }
+
+    .feature-icon {
       font-size: 3rem;
       margin-bottom: 1rem;
-      color: #1b4332;
+      display: block;
     }
-    .hero p {
-      font-size: 1.2rem;
-      margin-bottom: 2rem;
+
+    .feature-card h3 {
+      font-size: 1.25rem;
+      font-weight: 600;
+      color: var(--primary-color);
+      margin-bottom: 1rem;
     }
-    .cta-button {
-      background-color: #1b4332;
-      color: white;
-      padding: 0.8rem 1.8rem;
-      border: none;
-      border-radius: 30px;
-      font-size: 1rem;
-      text-decoration: none;
-      cursor: pointer;
-      font-weight: bold;
-      display: inline-block;
-      transition: background-color 0.3s ease, transform 0.3s ease;
+
+    .feature-card p {
+      color: var(--text-light);
+      line-height: 1.6;
     }
-    .cta-button:hover {
-      background-color: #14532d;
-      transform: scale(1.05);
-    }
-    .section {
-      padding: 3rem 2rem;
-      opacity: 1;
-      transform: translateY(0);
-      transition: none;
-    }
-    .section h2 {
+
+    /* CTA Section */
+    .cta-section {
+      background: var(--gradient-accent);
+      padding: 4rem 2rem;
       text-align: center;
-      color: #1b4332;
-      margin-bottom: 1.5rem;
+      border-radius: 20px;
+      margin: 3rem 0;
     }
-    .section p, .section ul {
-      max-width: 800px;
-      margin: auto;
+
+    .cta-section h2 {
+      font-family: 'Playfair Display', serif;
+      color: var(--primary-color);
+      margin-bottom: 1rem;
+    }
+
+    .cta-section p {
+      color: var(--secondary-color);
+      margin-bottom: 2rem;
       font-size: 1.1rem;
     }
-    ul {
-      list-style-type: square;
-      padding-left: 1.2rem;
-    }
-    .contact-form {
-      max-width: 600px;
-      margin: auto;
-      text-align: center;
-    }
-    .contact-form input, .contact-form textarea {
-      width: 100%;
-      padding: 0.7rem;
-      margin-bottom: 1rem;
-      border: 1px solid #1b4332;
-      border-radius: 6px;
-      font-family: 'Playfair Display', serif;
-    }
-    .contact-form button {
-      background-color: #1b4332;
-      color: white;
-      padding: 0.8rem 1.5rem;
-      border: none;
-      border-radius: 6px;
-      cursor: pointer;
-      font-weight: bold;
-      font-family: 'Playfair Display', serif;
-    }
-    .schedule-button {
-      display: inline-block;
-      margin-top: 2rem;
-      padding: 0.8rem 1.8rem;
-      background-color: #002147;
-      color: white;
-      text-decoration: none;
-      font-size: 1rem;
-      font-weight: bold;
-      border-radius: 30px;
-      transition: background-color 0.3s ease, transform 0.3s ease;
-    }
-    .schedule-button:hover {
-      background-color: #013;
-      transform: scale(1.05);
-    }
-    .footer {
-      background-color: #002147;
-      text-align: center;
-      color: white;
-      padding: 2rem 1rem;
-      font-size: 0.9rem;
-    }
-    .footer p {
-      margin: 0.5rem 0;
-    }
-    @media (max-width: 600px) {
-      header img {
-        max-width: 150px;
+
+    @media (max-width: 768px) {
+      .hero {
+        padding: 4rem 1rem;
       }
-      .hero h1 {
-        font-size: 2rem;
-      }
-    }
-    .tagline {
-      color: white;
-      font-size: 1.2rem;
-      margin: 0.5rem 0 1rem 0;
-      font-weight: 500;
     }
   </style>
 </head>
 <body>
   <header>
-    <img src="logo.png" alt="Perfectly Rooted Solutions Logo">
-    <nav>
-  <a href="#about">About</a>
-  <a href="#services">Services</a>
-  <a href="#contact">Contact</a>
-  <a href="packages.html">Packages</a>
-</nav>
-
+    <div class="header-container">
+      <div class="logo">
+        <img src="logo.png" alt="Perfectly Rooted Solutions Logo">
+      </div>
+      <nav>
+        <a href="index.html" class="active">🏠 Home</a>
+        <a href="about.html">🌱 About</a>
+        <a href="services.html">⚙️ Services</a>
+        <a href="packages.html">📦 Packages</a>
+        <a href="contact.html">📞 Contact</a>
+      </nav>
+    </div>
   </header>
 
-  <div class="hero">
-    <h1>Rooted in Purpose. Growing with Strategy.</h1>
-    <p>Empowering entrepreneurs and organizations to align purpose with performance.</p>
-    <a href="https://form.jotform.com/251166993980066" target="_blank" class="cta-button">Book a Consultation</a>
-  </div>
-
-  <div class="section" id="freeguide">
-    <h2>📘 Download Our Free Business Guide</h2>
-    <p style="text-align: center;">
-      Get your copy of “Rooted in Success” and build a stronger foundation for your business.
-    </p>
-    <div style="text-align: center; margin-top: 1.5rem;">
-      <a href="https://stan.store/perfectlyrooted/p/rooted-in-success-free-business-guide" target="_blank" class="cta-button">Download Free Guide</a>
+  <section class="hero">
+    <div class="hero-content fade-in-up">
+      <h1>🌳 Rooted in Purpose. Growing with Strategy.</h1>
+      <p>Empowering entrepreneurs and organizations to align purpose with performance through strategic guidance and innovative solutions.</p>
+      <a href="https://form.jotform.com/251166993980066" target="_blank" class="cta-button">
+        <i class="fas fa-calendar-alt"></i>
+        Book a Consultation
+      </a>
     </div>
-  </div>
+  </section>
 
-  <div class="section" id="about">
-    <h2>About Us</h2>
-    <p>At Perfectly Rooted Solutions, our mission is to empower entrepreneurs and organizations to grow from the ground up with clarity, confidence, and strategic guidance. We provide holistic, results-driven solutions rooted in integrity, innovation, and impactful execution.</p>
-  </div>
-
-  <div class="section" id="services">
-    <h2>Our Services</h2>
-    <ul>
-      <li>Business Strategy Consulting</li>
-      <li>Business Structure Setup (LLC, S-Corp, Nonprofit)</li>
-      <li>Capital Readiness and Resource Planning</li>
-      <li>Process Improvement</li>
-      <li>Custom Consulting Packages</li>
-    </ul>
-  </div>
-
-  <div class="section" id="contact">
-    <h2>📩 Contact Us With Questions</h2>
-    <div class="contact-form">
-      <form action="https://formspree.io/f/xldbdzap" method="POST">
-        <input type="text" name="name" placeholder="Your Name" required>
-        <input type="email" name="email" placeholder="Your Email" required>
-        <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
-        <button type="submit">Send Message</button>
-      </form>
+  <section class="main-content">
+    <div class="free-guide scroll-animate">
+      <h2>📘 Download Our Free Business Guide</h2>
+      <p>Get your copy of "Rooted in Success" and build a stronger foundation for your business with proven strategies and actionable insights.</p>
+      <div style="margin-top: 2rem;">
+        <a href="ebooks/Rooted_in_Success.pdf" target="_blank" class="guide-button">
+          <i class="fas fa-download"></i>
+          Download Free Guide
+        </a>
+      </div>
     </div>
 
-    <h2 style="margin-top: 3rem;">📅 Schedule Your Complimentary Consultation</h2>
-    <div style="text-align: center;">
-      <a href="https://form.jotform.com/251166993980066" target="_blank" class="schedule-button">Schedule Now</a>
+    <div class="section scroll-animate">
+      <div class="section-header">
+        <h2>🚀 Why Choose Perfectly Rooted Solutions?</h2>
+        <p>We provide comprehensive business solutions that help you grow from the ground up</p>
+      </div>
+      <div class="features-grid">
+        <div class="feature-card">
+          <span class="feature-icon">💡</span>
+          <h3>Strategic Innovation</h3>
+          <p>Cutting-edge strategies tailored to your unique business vision and market position.</p>
+        </div>
+        <div class="feature-card">
+          <span class="feature-icon">🎯</span>
+          <h3>Results-Driven</h3>
+          <p>Focused on delivering measurable outcomes that drive sustainable business growth.</p>
+        </div>
+        <div class="feature-card">
+          <span class="feature-icon">🤝</span>
+          <h3>Trusted Partnership</h3>
+          <p>Building long-term relationships based on integrity, transparency, and mutual success.</p>
+        </div>
+        <div class="feature-card">
+          <span class="feature-icon">⚡</span>
+          <h3>Rapid Implementation</h3>
+          <p>Quick turnaround times without compromising on quality or attention to detail.</p>
+        </div>
+      </div>
     </div>
-  </div>
 
-  <div class="footer">
-    <p>&copy; 2025 Perfectly Rooted Solutions. All rights reserved.</p>
-    <p>Phone: 800.893.0006 | Address: 141 Traction St Unit 256, Greenville, SC 29611</p>
-    <p>Email: info@perfectly-rooted.com</p><p>
-  <a href="/terms.html" style="color: #1b4332; text-decoration: underline;">
-    Terms & Privacy Policy
-  </a>
-</p>
-  </div>
+    <div class="cta-section scroll-animate">
+      <h2>🌟 Ready to Transform Your Business?</h2>
+      <p>Join hundreds of successful entrepreneurs who have grown their businesses with our proven strategies and expert guidance.</p>
+      <div style="display: flex; gap: 1rem; justify-content: center; flex-wrap: wrap;">
+        <a href="packages.html" class="btn btn-primary">
+          <i class="fas fa-rocket"></i>
+          View Our Packages
+        </a>
+        <a href="contact.html" class="btn btn-secondary">
+          <i class="fas fa-comments"></i>
+          Get In Touch
+        </a>
+      </div>
+    </div>
+  </section>
+
+  <footer class="footer">
+    <div class="footer-content">
+      <div class="footer-info">
+        <div class="footer-section">
+          <h4>📞 Contact Information</h4>
+          <p>Phone: 800.893.0006</p>
+          <p>Email: info@perfectly-rooted.com</p>
+        </div>
+        <div class="footer-section">
+          <h4>📍 Location</h4>
+          <p>Greenville, SC</p>
+        </div>
+        <div class="footer-section">
+          <h4>⚖️ Legal</h4>
+          <a href="/terms.html">Terms & Privacy Policy</a>
+        </div>
+      </div>
+      <div class="footer-bottom">
+        <p>© 2025 Perfectly Rooted Solutions. All rights reserved.</p>
+      </div>
+    </div>
+  </footer>
+
   <script>
-    document.querySelectorAll('a[href^="#"]').forEach(anchor => {
-      anchor.addEventListener('click', function(e) {
-        e.preventDefault();
-        const target = document.querySelector(this.getAttribute('href'));
-        if (target) {
-          target.scrollIntoView({
-            behavior: 'smooth',
-            block: 'start'
-          });
+    // Scroll animations
+    const observerOptions = {
+      threshold: 0.1,
+      rootMargin: '0px 0px -50px 0px'
+    };
+
+    const observer = new IntersectionObserver((entries) => {
+      entries.forEach(entry => {
+        if (entry.isIntersecting) {
+          entry.target.classList.add('animate');
         }
       });
+    }, observerOptions);
+
+    document.querySelectorAll('.scroll-animate').forEach(el => {
+      observer.observe(el);
     });
   </script>
 </body>
 </html>
+
