--- a/index.html
+++ b/index.html
@@ -223,10 +223,10 @@
     <div class="hero-content fade-in-up">
       <h1>🌳 Rooted in Purpose. Growing with Strategy.</h1>
       <p>Empowering entrepreneurs and organizations to align purpose with performance through strategic guidance and innovative solutions.</p>
-      <a href="https://form.jotform.com/251166993980066" target="_blank" class="cta-button">
+      <button onclick="openConsultationForm()" class="cta-button">
         <i class="fas fa-calendar-alt"></i>
         Book a Consultation
-      </a>
+      </button>
     </div>
   </section>
 
@@ -327,6 +327,93 @@
 
     document.querySelectorAll('.scroll-animate').forEach(el => {
       observer.observe(el);
+    });
+
+    // Consultation form functionality
+    function openConsultationForm() {
+      const formHtml = `
+        <div id="consultationModal" style="position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.8); z-index: 1000; display: flex; align-items: center; justify-content: center;">
+          <div style="background: white; padding: 2rem; border-radius: 10px; max-width: 500px; width: 90%; max-height: 80vh; overflow-y: auto;">
+            <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 1rem;">
+              <h3 style="margin: 0; color: var(--primary-color);">📅 Book Your Free Consultation</h3>
+              <button onclick="closeConsultationForm()" style="background: none; border: none; font-size: 1.5rem; cursor: pointer;">&times;</button>
+            </div>
+            <form id="consultationForm" onsubmit="submitConsultationForm(event)">
+              <div style="margin-bottom: 1rem;">
+                <label style="display: block; margin-bottom: 0.5rem; font-weight: 600;">Name *</label>
+                <input type="text" name="name" required style="width: 100%; padding: 0.75rem; border: 2px solid #ddd; border-radius: 5px; font-size: 1rem;">
+              </div>
+              <div style="margin-bottom: 1rem;">
+                <label style="display: block; margin-bottom: 0.5rem; font-weight: 600;">Email *</label>
+                <input type="email" name="email" required style="width: 100%; padding: 0.75rem; border: 2px solid #ddd; border-radius: 5px; font-size: 1rem;">
+              </div>
+              <div style="margin-bottom: 1rem;">
+                <label style="display: block; margin-bottom: 0.5rem; font-weight: 600;">Phone</label>
+                <input type="tel" name="phone" style="width: 100%; padding: 0.75rem; border: 2px solid #ddd; border-radius: 5px; font-size: 1rem;">
+              </div>
+              <div style="margin-bottom: 1rem;">
+                <label style="display: block; margin-bottom: 0.5rem; font-weight: 600;">Business Name</label>
+                <input type="text" name="business" style="width: 100%; padding: 0.75rem; border: 2px solid #ddd; border-radius: 5px; font-size: 1rem;">
+              </div>
+              <div style="margin-bottom: 1rem;">
+                <label style="display: block; margin-bottom: 0.5rem; font-weight: 600;">What can we help you with? *</label>
+                <textarea name="message" required rows="4" style="width: 100%; padding: 0.75rem; border: 2px solid #ddd; border-radius: 5px; font-size: 1rem; resize: vertical;"></textarea>
+              </div>
+              <button type="submit" style="width: 100%; padding: 1rem; background: var(--primary-color); color: white; border: none; border-radius: 5px; font-size: 1rem; font-weight: 600; cursor: pointer;">
+                📅 Schedule Consultation
+              </button>
+            </form>
+          </div>
+        </div>
+      `;
+      document.body.insertAdjacentHTML('beforeend', formHtml);
+    }
+
+    function closeConsultationForm() {
+      const modal = document.getElementById('consultationModal');
+      if (modal) {
+        modal.remove();
+      }
+    }
+
+    async function submitConsultationForm(event) {
+      event.preventDefault();
+      const form = event.target;
+      const formData = new FormData(form);
+      
+      try {
+        const response = await fetch('https://perfectly-rooted-forms-backend.onrender.com/api/submit-consultation', {
+          method: 'POST',
+          headers: {
+            'Content-Type': 'application/json',
+          },
+          body: JSON.stringify({
+            name: formData.get('name'),
+            email: formData.get('email'),
+            phone: formData.get('phone'),
+            business: formData.get('business'),
+            message: formData.get('message'),
+            form_type: 'consultation'
+          })
+        });
+
+        if (response.ok) {
+          alert('✅ Thank you! Your consultation request has been submitted successfully. We will contact you within 24 hours.');
+          closeConsultationForm();
+        } else {
+          throw new Error('Submission failed');
+        }
+      } catch (error) {
+        alert('❌ There was an error submitting your request. Please try again or contact us directly.');
+      }
+    }
+
+    // Close modal when clicking outside
+    document.addEventListener('click', function(event) {
+      const modal = document.getElementById('consultationModal');
+      if (modal && event.target === modal) {
+        closeConsultationForm();
+      }
     });
   </script>
 </body>
