--- a/index.html
+++ b/index.html
@@ -252,33 +252,6 @@
       box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
     }
 
-    .image-placeholder {
-      width: 250px;
-      height: 250px;
-      background: linear-gradient(135deg, #a3b18a 0%, #b8c5a5 100%);
-      border-radius: 50%;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      color: white;
-      text-align: center;
-      box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
-    }
-
-    .image-placeholder i {
-      font-size: 4rem;
-      margin-bottom: 1rem;
-      opacity: 0.8;
-    }
-
-    .image-placeholder p {
-      font-size: 0.9rem;
-      font-weight: 500;
-      opacity: 0.9;
-      margin: 0;
-    }
-
     /* CTA Section */
     .cta-section {
       background: linear-gradient(135deg, #a3b18a 0%, #b8c5a5 100%);
@@ -402,11 +375,7 @@
           </button>
         </div>
         <div class="founder-image">
-          <img src="upload/Me.jpg" alt="Toshen Poole - Founder" class="founder-photo" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
-          <div class="image-placeholder" style="display: none;">
-            <i class="fas fa-user"></i>
-            <p>Professional Photo<br>Coming Soon</p>
-          </div>
+          <img src="toshen_professional_photo.png" alt="Toshen Poole - Founder" class="founder-photo">
         </div>
       </div>
     </section>
