--- a/index.html
+++ b/index.html
@@ -11,30 +11,13 @@
 </head>
 <body>
   <!-- Exact same navigation structure as Services page -->
-  <nav class="navbar">
-    <div class="nav-container">
-      <div class="nav-logo">
-        <img src="logo.png" alt="Perfectly Rooted Solutions" class="logo">
-      </div>
-      <ul class="nav-menu">
-        <li class="nav-item">
-          <a href="index.html" class="nav-link active">🏠 Home</a>
-        </li>
-        <li class="nav-item">
-          <a href="about.html" class="nav-link">🌱 About</a>
-        </li>
-        <li class="nav-item">
-          <a href="services.html" class="nav-link">⚙️ Services</a>
-        </li>
-        <li class="nav-item">
-          <a href="packages.html" class="nav-link">📦 Packages</a>
-        </li>
-        <li class="nav-item">
-          <a href="contact.html" class="nav-link">📞 Contact</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
+    <nav>
+        <a href="index.html">🏠 Home</a>
+        <a href="about.html">🌱 About</a>
+        <a href="services.html" class="active">⚙️ Services</a>
+        <a href="packages.html">📦 Packages</a>
+        <a href="contact.html">📞 Contact</a>
+      </nav>
 
   <div class="container">
     <section class="hero scroll-animate">
