--- a/index.html
+++ b/index.html
@@ -10,14 +10,20 @@
   <link rel="stylesheet" href="shared-styles.css">
 </head>
 <body>
-  <!-- Exact same navigation structure as Services page -->
-    <nav>
-        <a href="index.html">🏠 Home</a>
+  <header>
+    <div class="header-container">
+      <div class="logo">
+        <img src="logo.png" alt="Perfectly Rooted Solutions Logo">
+      </div>
+      <nav>
+        <a href="index.html" class="active">🏠 Home</a>
         <a href="about.html">🌱 About</a>
-        <a href="services.html" class="active">⚙️ Services</a>
+        <a href="services.html">⚙️ Services</a>
         <a href="packages.html">📦 Packages</a>
         <a href="contact.html">📞 Contact</a>
       </nav>
+    </div>
+  </header>
 
   <div class="container">
     <section class="hero scroll-animate">
