--- a/index.html
+++ b/index.html
@@ -25,17 +25,17 @@
     </div>
   </header>
 
-  <div class="container">
-    <section class="hero scroll-animate">
-      <div class="hero-content">
-        <h1>🌳 Rooted in Purpose. Growing with Strategy.</h1>
-        <p>Empowering entrepreneurs and organizations to align purpose with performance through strategic guidance and innovative solutions.</p>
-        <button onclick="openConsultationForm()" class="cta-button">
-          <i class="fas fa-calendar-alt"></i>
-          Book a Consultation
-        </button>
-      </div>
-    </section>
+  <div class="page-header">
+  <div class="page-header-content fade-in-up">
+    <h1>🌳 Rooted in Purpose. Growing with Strategy.</h1>
+    <p>Empowering entrepreneurs and organizations to align purpose with performance through strategic guidance and innovative solutions.</p>
+    <button onclick="openConsultationForm()" class="cta-button">
+      <i class="fas fa-calendar-alt"></i>
+      Book a Consultation
+    </button>
+  </div>
+</div>
+
 
     <section class="free-guide scroll-animate">
       <h2>📘 Download Our Free Business Guide</h2>
